# MemoryEvolutionaryAgents

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  design.md  docker-compose.integration.yml  docker-compose.yml  pyproject.toml
dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
docker/: api.Dockerfile  dashboard.Dockerfile  worker.Dockerfile
migrations/: 001_phase1_ingestion_foundation.sql  002_phase1_tracking_enhancements.sql  003_phase0_1_onboarding.sql  004_phase2_ingestion_core.sql  005_phase3_ontology_evolution.sql  006_phase5_telemetry_cost_status.sql  007_phase6_progress_reliability.sql
plan/: CODING_GUARDRAILS.md  EXECUTION_PLAN.md  PHASE_0_1_TODO.md  PHASE_0_TODO.md  PHASE_1_TODO.md  PHASE_2_TODO.md  PHASE_3_TODO.md  PHASE_4_TODO.md  PHASE_5_TODO.md  PHASE_6_TODO.md  PHASE_TODO_INDEX.md  VUE_BUN_SETUP.md  architecture.md
scripts/: migrate.sh  run_phase2_integration_tests.sh
tests/: test_phase0_1.py  test_phase1.py  test_phase2_adapters.py  test_phase2_contracts.py  test_phase2_extraction.py  test_phase2_handlers.py  test_phase2_integration.py  test_phase2_regression.py  test_phase2_service.py  test_phase3_alias_resolution.py  test_phase3_api.py  test_phase3_integration.py  test_phase3_matcher.py  test_phase3_proposals.py  test_phase4_api.py  test_phase4_integration.py  test_phase4_linkwalk.py  test_phase4_service.py  test_phase4_validation.py  test_phase5_api.py  test_phase5_costing.py  test_phase5_integration.py  test_phase5_telemetry.py  test_phase6_api.py  test_phase6_policy.py  test_phase6_service.py  (+1 more)
(+65 files in other folders)
