[project]
name = "memory-evolutionary-agents"
version = "0.1.0"
description = "Phase 1 ingestion foundation for Memory Evolutionary Agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.31.0",
  "pydantic>=2.9.0",
  "cryptography>=45.0.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "simple-agents-py>=0.2.36",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
